# Lattia-Dialogue

./: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
docs/: design.md
scripts/: pii.py
src/: app.py
src/lattia/: app.py  chat.py  db.py  logic.py  main.py  models.py  schemas.py  warmup.py
src/lattia/core/: __init__.py  chat.py  generation.py  llm.py
src/lattia/core/agent/: __init__.py  agent.py  llm.py  schemas.py  utils.py
src/lattia/core/agent/prompts/: interview_agent.md  post_interview_agent.md  post_user_message.md  proactive_interview_agent.md
src/lattia/core/parsers/: health_questions.py
src/lattia/core/pii/: __init__.py  pii_redactor.py  pii_type.py
src/lattia/core/utils/: formatting.py  openai_client.py
src/lattia/core/vector_db/: embeddings.py  ingest.py  qdrant_store.py  retriever.py
src/lattia/static/: app.js  chat.html  index.html  style.css
